Fix overflow left and right for mobile device

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,16 @@ body {
     color:#45545E;
 }
 
+.container-fluid {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 h1, h2, h3, h4 {
     font-family: 'Lato', sans-serif;
 }
@@ -82,7 +92,9 @@ section {
 }
 
 .jumbotron {
-    background-color: rgba(255,255,255,0.5);   
+    background-color: rgba(255,255,255,0.5);
+    margin-left: 15px;   
+    margin-right: 15px;
 }
 
 .jumbotron-header {
